syntax = "proto3";

import "google/rpc/status.proto";

option go_package = ".;currency";

service Currency{
  // Get return exchange rate for the two provided currency codes
  rpc GetRate(RateRequest) returns (RateResponse);
  // Subscribe allows client to subscribe to exchange rate for the two provided currency codes
  // on change the client is notified by the server
  rpc Subscribe(stream RateRequest) returns (stream StreamingRateResponse);
}

message RateRequest{
  // Base is the base currency for the rate
  Currencies Base = 1;
  // Destination is the destination currency for the rate
  Currencies Destination = 2;
}

message RateResponse{
  // Base is the base currency for the rate
  Currencies Base = 1;
  // Destination is the destination currency for the rate
  Currencies Destination = 2;
  // Rate is the exchange rate returned for the currency codes
  double Rate = 3;
}

message StreamingRateResponse {
  // oneof sets any one of the following options
  oneof message{
    // RateResponse returns the exchange rate when updated
    RateResponse rate_response = 1;
    // status returns rich error messages to the client 
    google.rpc.Status error = 2;
  }
}

// Currencies is an enum which represents the allowed currencies for the API
enum Currencies {
  EUR=0;
  USD=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
  RON=9;
  SEK=10;
  CHF=11;
  ISK=12;
  NOK=13;
  HRK=14;
  RUB=15;
  TRY=16;
  AUD=17;
  BRL=18;
  CAD=19;
  CNY=20;
  HKD=21;
  IDR=22;
  ILS=23;
  INR=24;
  KRW=25;
  MXN=26;
  MYR=27;
  NZD=28;
  PHP=29;
  SGD=30;
  THB=31;
  ZAR=32;
};

